[gd_scene load_steps=3 format=2]

[ext_resource path="res://Magie/fire_hitbox.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 4.12311

[node name="fire_hitbox" type="Area2D"]
collision_layer = 2
collision_mask = 10
script = ExtResource( 1 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="body_entered" from="." to="." method="_on_fire_hitbox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
